# tensorRT_test

./: CMakeLists.txt  README.md  main.cpp
include/: yolov8_trt_demo.h
src/: yolov8_trt_demo.cpp
